<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectVeggies"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".presentation.SelectVeggiesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ChooseVeggiesHeader"
            android:text="CHOOSE YOUR VEGGIES"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF9800"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_button_001">

        <CheckBox
            android:id="@+id/basilCheck"
            android:text="Basil"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center" />

        <CheckBox
            android:id="@+id/olivesCheck"
            android:text="Olives"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/jalapenosCheck"
            android:text="Jalapenos"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/whiteOnionCheck"
            android:text="White Onions"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/redOnionCheck"
            android:text="Red Onions"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/tomatoCheck"
            android:text="Tomatoes"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/greenPepperCheck"
            android:text="Green Pepper"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/mushroomsCheck"
            android:text="Mushrooms"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

    </LinearLayout>

        <Button
            android:id="@+id/veggiesNext"
            android:text="Next"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/bg_button_002"/>

    </LinearLayout>

</ScrollView>