...
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/chickenCheck"
            android:text="Chicken"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>
...
            android:layout_height="100dp"
            android:layout_gravity="center"/>

    </LinearLayout>

        <Button
            android:id="@+id/meatNext"
            android:text="Next"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
...
