<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderType"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".presentation.SpecialsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/SpecialsHeader"
            android:text="SPECIALS MENU"
            android:textAlignment="center"
            android:textSize="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF9800"/>

        <RadioGroup
            android:id="@+id/sizeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_button_001">

            <RadioButton
                android:id="@+id/smallSpecial"
                android:text='Small (10")'
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/mediumSpecial"
                android:text='Medium (12")'
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/largeSpecial"
                android:text='Large (14")'
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

        </RadioGroup>

        <RadioGroup
            android:id="@+id/specialsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_button_001">

            <RadioButton
                android:id="@+id/veggieLovers"
                android:text="Veggie Lovers"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/meatLovers"
                android:text="Meat Lovers"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/cheesey"
                android:text="Cheesey Supreme"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/margherita"
                android:text="Margherita"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/classicPepperoni"
                android:text="Classic Pepperoni"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/chickenAlfredo"
                android:text="Chicken Alfredo"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/deluxe"
                android:text="Deluxe"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/allInOne"
                android:text="All-In-One"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
        </RadioGroup>

        <Button
            android:id="@+id/specialsNext"
            android:text="Next"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/bg_button_002"/>

    </LinearLayout>

</ScrollView>